--- a/templates/index.html
+++ b/templates/index.html
@@ -33,51 +33,17 @@
         <ul>
           <li>
             <a href="#" class="active">
-              <!-- Dashboard Icon -->
+              <!-- Globe Icon -->
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
                 fill="currentColor"
               >
                 <path
-                  d="M10.5,4.5a6,6,0,1,0,6,6A6,6,0,0,0,10.5,4.5ZM5.41,18.59a9,9,0,0,1,10.18,0,1,1,0,0,0,1.41-1.41,11,11,0,0,0-13,0,1,1,0,0,0,1.41,1.41Z"
+                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"
                 />
               </svg>
-              Dashboard
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- Anomaly/Alert Icon -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M5.25 9a6.75 6.75 0 0113.5 0v.75c0 2.123.8 4.057 2.118 5.52a.75.75 0 01-.297 1.206c-1.544.57-3.16.99-4.831 1.243a3.75 3.75 0 11-7.48 0c-1.67-.253-3.287-.673-4.831-1.243a.75.75 0 01-.297-1.206C4.45 13.807 5.25 11.873 5.25 9.75V9zm4.502 8.9a2.25 2.25 0 104.496 0H9.752z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              Anomalies
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- Search Icon -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10.5 3.75a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM2.25 10.5a8.25 8.25 0 1114.59 5.28l4.69 4.69a.75.75 0 11-1.06 1.06l-4.69-4.69A8.25 8.25 0 012.25 10.5z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              Search
+              Map View
             </a>
           </li>
         </ul>
